Rename MultiFolder and Folder class, Rework flatten method in FileCabinet